src/test/ui/privacy/privacy4.stderr
error[E0603]: module `glob` is private
  --> $DIR/privacy4.rs:21:14
   |
LL |     use bar::glob::gpriv;
   |              ^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0603`.
